Updated 'css/main.css' via CloudCannon

--- a/css/main.css
+++ b/css/main.css
@@ -120,9 +120,9 @@ li {
 	padding-top:30px;
 	}
 
-.menu ul li:hover ul {
-  display:block;
-  }
+/*.menu ul li:hover ul {*/
+/*  display:block;*/
+/*  }*/
 
   /*This is the about page*/
 
