--- a/css/main.css
+++ b/css/main.css
@@ -115,14 +115,11 @@ li {
 	}
 
 .menu ul li ul {
-	display:none;
+	display: block;
 	font-size:2rem;
 	padding-top:30px;
 	}
 
-/*.menu ul li:hover ul {*/
-/*  display:block;*/
-/*  }*/
 
   /*This is the about page*/
 
@@ -257,8 +254,8 @@ li {
   margin-bottom: 2%;
 }
 
-@media only screen and (max-width: 500px) {
-  .menu ul li ul {
-    display:block;
-    }
-}
+/*@media only screen and (max-width: 500px) {*/
+/*  .menu ul li ul {*/
+/*    display:block;*/
+/*    }*/
+/*}*/
